--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
             <h1>स्वागतम्</h1>
             <p style="font-size: 1.3em; color: #ff6b35; font-weight: 600; margin-bottom: 5px;">Welcome!</p>
             <div class="decorative-line"></div>
-            <p class="subtitle">Please enter your access code to view the<br>details</p>
+            <p class="subtitle">Please enter your access code to view the details</p>
             
             <div class="input-group">
                 <label for="accessCode">🔑 Access Code</label>
